--- a/scss/components/_lightbox.scss
+++ b/scss/components/_lightbox.scss
@@ -62,6 +62,16 @@
         }
     }
 
+    .lightbox-image-container {
+        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 0;
+        width: 100%;
+        height: 100%;
+    }
+
     .lightbox-image {
         max-width: 100%;
         max-height: 100%;
